       pointed to by /logmsgfile:<path>. (Stefan)
- NEW: The cache automatically closes all open handles for drives the user
       wants to remove. See issue #188. (Stefan)
- NEW: Revert, Add, Resolve and Create Patch dialog can be refreshed by
       pressing F5. See issue #191. (Stefan)
- NEW: Ignoring of multiple items at once in the Status List Control.
       See issue #189. (Stefan)
- CHG: The date filter in the log dialog now prevents the user from selecting
       dates outside the shown log messages. (Michael Dietschi)
- CHG: Warn if user selects files inside an added folder to create a patch.
       Subversion and patch doesn't support this. (Stefan)
- CHG: Ctrl-A now selects all entries in the file list controls. (Stefan)
- CHG: "Show log" in the file list controls for all versioned files.
       See issue #172. (Stefan)
- CHG: Ctrl-click expands the whole tree in the repository browser. (Stefan)
- CHG: Improved the revision graph. See issue #173. (Stefan)
- CHG: Better selecting of nodes in the revision graph. 
       See issue #185. (Stefan
- BUG: When files were added to the ignore list, a choice of 
       File.ext or *.ext is given. If the *.ext is chosen the dialog 
       box told that File.ext was successfully added instead of *.ext. (Stefan)
- BUG: After a merge which produced conflicts, the context menu wasn't
       shown with the entries to resolve the conflict. (Stefan)
- BUG: Creating a patch from files was disabled, it only worked
       from folders. (Stefan)
- BUG: The 'mark as resolved' and 'save' buttons were enabled even
       if TortoiseMerge was started from the 'Check for modifications'
       dialog. See issue #178. (Stefan)
- BUG: After marking a conflict as resolved in TortoiseMerge, it still
       asked if you want to save the changes on exit. (Stefan)
- BUG: If the initial URL with which the repository browser was started
       pointed to subfolders of the repository root, the repository root