@@ -3,6 +3,7 @@
 char *Revision = "$WCREV$";
 char *Modified = "$WCMODS?Modified:Not modified$";
 char *Date     = "$WCDATE$";
+char *TimeNow  = "$WCNOW$";
 char *RevRange = "$WCRANGE$";
 char *Mixed    = "$WCMIXED?Mixed revision WC:Not mixed$";
 char *URL      = "$WCURL$";
